tests/snapshots/snapshot_tests__array2dim_init.vmt.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "./examples/array2dim_init.vmt",
    status: Good,
    used_instantiations: [],
}
