tests/snapshots/snapshot_tests__array2dim_rec2.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(&path)
---
BenchmarkResult {
    example_name: "examples/array2dim_rec2.vmt",
    status: Panic,
    used_instantiations: [],
}
